--- a/package.json
+++ b/package.json
@@ -1,61 +1,64 @@
 {
-    "name": "@sebamar88/utils",
-    "version": "0.1.7",
-    "type": "module",
-    "description": "Modern TypeScript utility toolkit for the Nubi Lab team (HTTP client, logging, helpers)",
-    "imports": {
-        "#core/*": "./dist/utils/core/*",
-        "#utils/*": "./dist/utils/*",
-        "#helpers/*": "./dist/utils/helpers/*"
-    },
-    "main": "./dist/index.js",
-    "types": "./dist/index.d.ts",
-    "exports": {
-        ".": {
-            "types": "./dist/index.d.ts",
-            "import": "./dist/index.js"
-        }
-    },
-    "scripts": {
-        "build": "tsc -p tsconfig.json",
-        "clean": "node -e \"require('fs').rmSync('dist', { recursive: true, force: true });\"",
-        "lint": "tsc --noEmit",
-        "test": "npm run lint && npm run build && node --test tests/**/*.test.js",
-        "prepublishOnly": "npm run lint && npm run clean && npm run build"
-    },
-    "files": [
-        "dist"
-    ],
-    "keywords": [
-        "nubi",
-        "http-client",
-        "logger",
-        "typescript",
-        "utilities"
-    ],
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/sebamar88/nubi-lab-utils.git"
-    },
-    "bugs": {
-        "url": "https://github.com/sebamar88/nubi-lab-utils/issues"
-    },
-    "homepage": "https://github.com/sebamar88/nubi-lab-utils#readme",
-    "author": "Nubi Lab",
-    "license": "MIT",
-    "sideEffects": false,
-    "publishConfig": {
-        "access": "public"
-    },
-    "engines": {
-        "node": ">=18"
-    },
-    "dependencies": {
-        "cross-fetch": "^4.1.0"
-    },
-    "devDependencies": {
-        "@types/node": "^22.9.0",
-        "typescript": "^5.9.3"
-    },
-    "packageManager": "pnpm@10.12.1+sha512.f0dda8580f0ee9481c5c79a1d927b9164f2c478e90992ad268bbb2465a736984391d6333d2c327913578b2804af33474ca554ba29c04a8b13060a717675ae3ac"
+  "name": "@sebamar88/utils",
+  "version": "0.1.7",
+  "type": "module",
+  "description": "Modern TypeScript utility toolkit for the Nubi Lab team (HTTP client, logging, helpers)",
+  "imports": {
+    "#core/*": "./dist/utils/core/*",
+    "#utils/*": "./dist/utils/*",
+    "#helpers/*": "./dist/utils/helpers/*"
+  },
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "bin": {
+    "sutils": "./bin/sutils.js"
+  },
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    }
+  },
+  "scripts": {
+    "build": "tsc -p tsconfig.json",
+    "clean": "node -e \"require('fs').rmSync('dist', { recursive: true, force: true });\"",
+    "lint": "tsc --noEmit",
+    "test": "npm run lint && npm run build && node --test tests/**/*.test.js",
+    "prepublishOnly": "npm run lint && npm run clean && npm run build"
+  },
+  "files": [
+    "dist",
+    "bin"
+  ],
+  "keywords": [
+    "nubi",
+    "http-client",
+    "logger",
+    "typescript",
+    "utilities"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sebamar88/nubi-lab-utils.git"
+  },
+  "bugs": {
+    "url": "https://github.com/sebamar88/nubi-lab-utils/issues"
+  },
+  "homepage": "https://github.com/sebamar88/nubi-lab-utils#readme",
+  "author": "Nubi Lab",
+  "license": "MIT",
+  "sideEffects": false,
+  "publishConfig": {
+    "access": "public"
+  },
+  "engines": {
+    "node": ">=18"
+  },
+  "dependencies": {
+    "cross-fetch": "^4.1.0"
+  },
+  "devDependencies": {
+    "@types/node": "^25.0.3",
+    "typescript": "^5.9.3"
+  }
 }
