feat(package): rebrand @bolt/core to bytekit
- Update package name from @bolt/core to bytekit across all documentation
- Replace all import paths in README examples from @bolt/core to bytekit
- Update installation instructions to reference bytekit package
- Update CLI references to use new package branding
- Maintain all existing functionality and module structure under new brand name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@bolt/core",
+    "name": "bytekit",
     "description": "Lightning-fast TypeScript utilities for modern development",
     "version": "0.1.11",
     "type": "module",
