feat: Implement detailed comparison between native fetch and ApiClient
- Added a new script `compare-fetch-vs-apiclient.ts` to compare native fetch and ApiClient behavior.
- Included tests for various scenarios including error handling and response validation.

feat: Enhance error handling in ApiClient

- Introduced improved `ApiError` class with detailed properties and methods for better debugging.
- Updated error handling in `ApiClient` to log detailed error information.

feat: Improve post/put/patch methods in ApiClient

- Modified `post`, `put`, and `patch` methods to accept both direct body and RequestOptions.
- Added normalization logic to differentiate between body and options.

test: Add comprehensive tests for ApiClient body detection

- Created tests to validate the new behavior of `post`, `put`, and `patch` methods.
- Ensured backward compatibility with existing syntax.

fix: Update TypeScript configuration for better compatibility

- Changed target and lib in `tsconfig.json` to ES2020 for broader compatibility.

docs: Update ApiClient documentation with error handling details

- Added sections on `ApiError` class and error handling best practices in the documentation.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,12 +26,18 @@
         "moduleDetection": "force",
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
-        "target": "ES2023",
+        "target": "ES2020",
         "lib": [
-            "ES2023",
+            "ES2020",
             "DOM"
         ],
-        "moduleResolution": "bundler"
+        "moduleResolution": "node",
+        "paths": {
+            "#core/*": ["./utils/core/*"],
+            "#helpers/*": ["./utils/helpers/*"],
+            "#utils/*": ["./utils/*"]
+        },
+        "baseUrl": "./src"
     },
     "include": [
         "src"
