--- a/package.json
+++ b/package.json
@@ -212,7 +212,8 @@
     "node": ">=18"
   },
   "dependencies": {
-    "cross-fetch": "^4.1.0"
+    "cross-fetch": "^4.1.0",
+    "tsx": "^4.21.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.0.0",
@@ -225,7 +226,7 @@
     "typescript-eslint": "^8.0.0"
   },
   "peerDependencies": {
-    "typescript": ">=5.9.0"
+    "typescript": ">=4.5.0"
   },
   "peerDependenciesMeta": {
     "typescript": {
