--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,10 +27,7 @@
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
         "target": "ES2020",
-        "lib": [
-            "ES2020",
-            "DOM"
-        ],
+        "lib": ["ES2020", "DOM"],
         "moduleResolution": "node",
         "paths": {
             "#core/*": ["./utils/core/*"],
@@ -39,13 +36,8 @@
         },
         "baseUrl": "./src"
     },
-    "include": [
-        "src"
-    ],
-    "exclude": [
-        "node_modules",
-        "dist"
-    ],
+    "include": ["src"],
+    "exclude": ["node_modules", "dist"],
     "ts-node": {
         "esm": true,
         "experimentalEsm": true
