fix: Update linting command in package.json and improve ApiClient request options handling refactor: Remove outdated body detection tests for ApiClient test: Adjust PollingHelper test to handle string errors correctly

--- a/package.json
+++ b/package.json
@@ -175,13 +175,14 @@
         "build": "tsc -p tsconfig.json",
         "clean": "node -e \"require('fs').rmSync('dist', { recursive: true, force: true });\"",
         "lint": "eslint src tests",
+        "lint:src": "eslint src",
         "lint:fix": "eslint src tests --fix",
         "format": "prettier --write \"src/**/*.{ts,js,json}\" \"tests/**/*.{ts,js,json}\"",
         "test": "npm run lint && npm run build && node --test tests/*.test.js",
         "test:coverage": "npm run build && node --experimental-test-coverage --test tests/*.test.js",
         "test:all": "pnpm run test",
         "wiki:generate": "node scripts/generate-wiki.js",
-        "prepublishOnly": "pnpm run lint && pnpm run clean && pnpm run build"
+        "prepublishOnly": "pnpm run lint:src && pnpm run clean && pnpm run build"
     },
     "files": [
         "dist",
