coverage updated, new docs

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -52,7 +52,6 @@ jobs:
       uses: actions/github-script@v7
       with:
         script: |
-          const fs = require('fs');
           const coverage = '${{ steps.coverage.outputs.coverage }}';
           const coverageNum = parseFloat(coverage);
           
@@ -60,15 +59,14 @@ jobs:
           const status = coverageNum >= 80 ? 'Great coverage!' : coverageNum >= 60 ? 'Coverage could be improved' : 'Low coverage - please add more tests';
           
           const comment = `## 📊 Code Coverage Report
-          
+
 **Coverage:** ${coverage}% ${emoji}
 
 ${status}
 
-[View full coverage report](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})
-          `;
+[View full coverage report](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})`;
           
-          github.rest.issues.createComment({
+          await github.rest.issues.createComment({
             issue_number: context.issue.number,
             owner: context.repo.owner,
             repo: context.repo.repo,
