--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
         "target": "ES2020",
-        "lib": ["ES2020", "DOM"],
+        "lib": ["ES2020", "ES2021", "ES2022", "DOM"],
         "moduleResolution": "node",
         "paths": {
             "#core/*": ["./utils/core/*"],
