--- a/package.json
+++ b/package.json
@@ -222,10 +222,8 @@
     "engines": {
         "node": ">=18"
     },
-    "dependencies": {
-        "tsx": "^4.21.0"
-    },
     "devDependencies": {
+        "tsx": "^4.21.0",
         "@eslint/js": "^9.0.0",
         "@types/node": "^25.0.3",
         "@vitest/coverage-v8": "^2.1.8",
