--- a/.github/workflows/test-and-coverage.yml
+++ b/.github/workflows/test-and-coverage.yml
@@ -26,16 +26,15 @@ jobs:
                   cache: "npm"
 
             - name: Install dependencies
-              run: npm ci
+              run: pnpm install
 
             - name: Run linter
-              run: npm run lint
+              run: pnpm run lint
 
             - name: Build project
-              run: npm run build
-
+              run: pnpm run build
             - name: Run tests
-              run: npm test
+              run: pnpm test
 
     coverage:
         name: Code Coverage
@@ -50,18 +49,18 @@ jobs:
               uses: actions/setup-node@v4
               with:
                   node-version: "20.x"
-                  cache: "npm"
+                  cache: "pnpm"
 
             - name: Install dependencies
-              run: npm ci
+              run: pnpm install
 
             - name: Build project
-              run: npm run build
+              run: pnpm run build
 
             - name: Run tests with coverage and JUnit report
               run: |
-                  npm run test:coverage
-                  npm run test:junit
+                  pnpm run test:coverage
+                  pnpm run test:junit
 
             - name: Upload test results to Codecov
               if: ${{ !cancelled() }}
