fix: add pnpm setup step to GitHub Actions workflow

--- a/.github/workflows/test-and-coverage.yml
+++ b/.github/workflows/test-and-coverage.yml
@@ -23,7 +23,11 @@ jobs:
               uses: actions/setup-node@v4
               with:
                   node-version: ${{ matrix.node-version }}
-                  cache: "npm"
+
+            - name: Setup pnpm
+              uses: pnpm/action-setup@v4
+              with:
+                  version: 8
 
             - name: Install dependencies
               run: pnpm install
@@ -49,7 +53,11 @@ jobs:
               uses: actions/setup-node@v4
               with:
                   node-version: "20.x"
-                  cache: "pnpm"
+
+            - name: Setup pnpm
+              uses: pnpm/action-setup@v4
+              with:
+                  version: 8
 
             - name: Install dependencies
               run: pnpm install
