refactor: update test coverage scripts to use 'c8' for improved reporting

--- a/package.json
+++ b/package.json
@@ -183,10 +183,10 @@
         "test:watch": "vitest",
         "test:ui": "vitest --ui",
         "test:junit": "npm run build && node --test --test-reporter=spec --test-reporter-destination=stdout --test-reporter=junit --test-reporter-destination=test-report.junit.xml tests/*.test.js",
-        "test:coverage": "npm run build && node --experimental-test-coverage --test --test-coverage-include=dist/utils/**/*.js --test-coverage-include=dist/index.js tests/*.test.js",
+        "test:coverage": "npm run build && npx c8 --reporter=lcov --reporter=text node --test tests/*.test.js",
         "test:coverage:watch": "vitest --coverage",
         "test:node": "npm run build && node --test tests/*.test.js",
-        "test:node:coverage": "npm run build && node --experimental-test-coverage --test tests/*.test.js",
+        "test:node:coverage": "npm run build && npx c8 --reporter=lcov --reporter=text node --test tests/*.test.js",
         "test:all": "pnpm run test",
         "typecheck": "tsc --noEmit",
         "wiki:generate": "node scripts/generate-wiki.js",
