chore: add conditional for coverage badge creation based on GIST secrets

--- a/.github/workflows/test-and-coverage.yml
+++ b/.github/workflows/test-and-coverage.yml
@@ -96,6 +96,7 @@ jobs:
                   echo "Coverage: $COVERAGE%"
 
             - name: Create coverage badge
+              if: ${{ secrets.GIST_SECRET && secrets.GIST_ID }}
               uses: schneegans/dynamic-badges-action@v1.7.0
               with:
                   auth: ${{ secrets.GIST_SECRET }}
