--- a/.github/workflows/test-and-coverage.yml
+++ b/.github/workflows/test-and-coverage.yml
@@ -44,6 +44,9 @@ jobs:
         name: Code Coverage
         runs-on: ubuntu-latest
         needs: test
+        permissions:
+            contents: read
+            pull-requests: write
 
         steps:
             - name: Checkout code
