feat: update test scripts and improve test command structure fix: rename unused variables in tests for clarity chore: add glob dependency for dynamic test file discovery

--- a/package.json
+++ b/package.json
@@ -179,14 +179,14 @@
         "lint:fix": "eslint src tests --fix",
         "format": "prettier --write \"src/**/*.{ts,js,json}\" \"tests/**/*.{ts,js,json}\"",
         "format:check": "prettier --check \"src/**/*.{ts,js,json}\" \"tests/**/*.{ts,js,json}\"",
-        "test": "npm run lint && npm run build && node --test tests/*.test.js",
+        "test": "npm run lint && npm run build && node scripts/run-tests.js",
         "test:watch": "vitest",
         "test:ui": "vitest --ui",
-        "test:junit": "npm run build && node --test --test-reporter=spec --test-reporter-destination=stdout --test-reporter=junit --test-reporter-destination=test-report.junit.xml tests/*.test.js",
-        "test:coverage": "npm run build && npx c8 --reporter=lcov --reporter=text node --test tests/*.test.js",
+        "test:junit": "npm run build && node scripts/run-tests.js",
+        "test:coverage": "npm run build && vitest run --coverage",
         "test:coverage:watch": "vitest --coverage",
-        "test:node": "npm run build && node --test tests/*.test.js",
-        "test:node:coverage": "npm run build && npx c8 --reporter=lcov --reporter=text node --test tests/*.test.js",
+        "test:node": "npm run build && node scripts/run-tests.js",
+        "test:node:coverage": "npm run build && vitest run --coverage",
         "test:all": "pnpm run test",
         "typecheck": "tsc --noEmit",
         "wiki:generate": "node scripts/generate-wiki.js",
@@ -224,15 +224,16 @@
         "node": ">=18"
     },
     "devDependencies": {
-        "tsx": "^4.21.0",
         "@eslint/js": "^9.0.0",
         "@types/node": "^25.0.3",
         "@vitest/coverage-v8": "^2.1.8",
         "@vitest/ui": "^2.1.8",
         "eslint": "^9.0.0",
         "fast-check": "^4.5.2",
+        "glob": "^13.0.1",
         "globals": "^15.0.0",
         "prettier": "^3.0.0",
+        "tsx": "^4.21.0",
         "typedoc": "^0.28.16",
         "typedoc-plugin-markdown": "^4.9.0",
         "typescript": "^5.9.3",
