--- a/package.json
+++ b/package.json
@@ -182,11 +182,11 @@
         "test": "npm run lint && npm run build && node scripts/run-tests.js",
         "test:watch": "vitest",
         "test:ui": "vitest --ui",
-        "test:junit": "npm run build && node scripts/run-tests.js",
-        "test:coverage": "npm run build && vitest run --coverage",
+        "test:junit": "npm run build && node scripts/run-tests-junit.js",
+        "test:coverage": "npm run build && node scripts/run-tests-coverage.js",
         "test:coverage:watch": "vitest --coverage",
         "test:node": "npm run build && node scripts/run-tests.js",
-        "test:node:coverage": "npm run build && vitest run --coverage",
+        "test:node:coverage": "npm run build && node scripts/run-tests-coverage.js",
         "test:all": "pnpm run test",
         "typecheck": "tsc --noEmit",
         "wiki:generate": "node scripts/generate-wiki.js",
@@ -228,6 +228,7 @@
         "@types/node": "^25.0.3",
         "@vitest/coverage-v8": "^2.1.8",
         "@vitest/ui": "^2.1.8",
+        "c8": "^10.1.3",
         "eslint": "^9.0.0",
         "fast-check": "^4.5.2",
         "glob": "^13.0.1",
