--- a/.github/workflows/bundle-size.yml
+++ b/.github/workflows/bundle-size.yml
@@ -4,6 +4,10 @@ on:
     pull_request:
         branches: [main, develop]
 
+permissions:
+    contents: read
+    pull-requests: write
+
 jobs:
     size:
         runs-on: ubuntu-latest
