Add project constitution and enhance Profiler with namespace support (#4)
* feat: add project constitution and enhance Profiler class with namespace support
test: add comprehensive tests for CompressionUtils, CryptoUtils, FormUtils, Logger, and Profiler

* 1.0.21

* feat: update CHANGELOG with namespace support and improved test coverage details

* feat: enhance utilities with additional features and improve test descriptions

* fix: correct formatting in base64Encode method for better readability

* feat: add permissions section to coverage workflow for pull request handling

* feat: normalize test file paths for cross-platform compatibility

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -6,6 +6,10 @@ on:
     pull_request:
         branches: [main, develop]
 
+permissions:
+    contents: read
+    pull-requests: write
+
 jobs:
     coverage:
         runs-on: ubuntu-latest
@@ -36,7 +40,7 @@ jobs:
             - name: Extract coverage percentage
               id: coverage
               run: |
-                  COVERAGE=$(grep -oP 'all files\s+\|\s+\K[\d.]+' coverage.txt | head -1 || echo "0")
+                  COVERAGE=$(grep "^All files" coverage.txt | awk '{print $4}' || echo "0")
                   echo "coverage=$COVERAGE" >> $GITHUB_OUTPUT
                   echo "📊 Coverage: $COVERAGE%"
 
