--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "main": "./dist/index.js",
     "types": "./dist/index.d.ts",
     "bin": {
-        "sutils": "./bin/sutils.js"
+        "bytekit": "./bin/bytekit.js"
     },
     "exports": {
         ".": {
